
public class ClientWindow {

	public ClientWindow(String hostAdress) {
		// TODO Auto-generated constructor stub
	}

}
