
public class Constants {
	//Constants
	public static int wormSize=10;
	public static int gameWidth=800;
	public static int gameHeight=600;
}
