
public class Direction extends Position{

	public Direction(int x, int y) {
		super(x, y);
		// TODO Auto-generated constructor stub
	}

}
