
public class Main {

	
	
	public static void main(String[] args){
		GameEngine gm = new GameEngine();
		gm.run();
	}

}
