@startuml

title __ROYALWORM's Class Diagram__\n

  package Positions {
    class BoardCordinates {
    }
  }
  

  package BoardObjects {
    class Boost {
    }
  }
  

  package BoardObjects {
    class BoostManager {
    }
  }
  

  package BoardObjects {
    class Bullet {
    }
  }
  

  package Positions {
    class Change {
    }
  }
  

  package Canvas {
    class ClientCanvas {
    }
  }
  

  package Windows {
    class ClientWindow {
    }
  }
  

  package GameHandling {
    class CollisionHandler {
    }
  }
  

  package src {
    class Constants {
    }
  }
  

  package GameHandling {
    class Controller {
    }
  }
  

  package Positions {
    class Direction {
    }
  }
  

  package BoardObjects {
    class DynamicObject {
    }
  }
  

  package Canvas {
    class GameCanvas {
    }
  }
  

  package GameHandling {
    class GameEngine {
    }
  }
  

  package Canvas {
    class GameGraphics {
    }
  }
  

  package BoardObjects {
    class GameObject {
    }
  }
  

  package Windows {
    class GameStartWindow {
    }
  }
  

  package Windows {
    class GameWindow {
    }
  }
  

  package BoardObjects {
    class Ghost {
    }
  }
  

  package src {
    class Main {
    }
  }
  

  package Network {
    class NetworkController {
    }
  }
  

  package Network {
    class NetworkReciever {
    }
  }
  

  package BoardObjects {
    class Player {
    }
  }
  

  package Canvas {
    class PlayerPanel {
    }
  }
  

  package Positions {
    class Position {
    }
  }
  

  package Windows {
    class StartScreen {
    }
  }
  

  package src {
    class Testing {
    }
  }
  

  package BoardObjects {
    class Worm {
    }
  }
  

  Boost -up-|> GameObject
  Bullet -up-|> DynamicObject
  Bullet o-- Position : position
  Bullet o-- Worm : w
  Change -up-|> BoardCordinates
  ClientCanvas -up-|> JPanel
  ClientWindow o-- ClientCanvas : clientCanvas
  Controller -up-|> Observer
  Controller o-- GameEngine : gameEngine
  Controller o-- GameWindow : gw
  Controller o-- NetworkReciever : nwReciever
  Direction -up-|> BoardCordinates
  DynamicObject -up-|> GameObject
  DynamicObject o-- Direction : direction
  GameCanvas -up-|> JPanel
  GameEngine -up-|> Observable
  GameEngine o-- BoostManager : boostManager
  GameObject o-- Position : position
  GameWindow -up-|> Observer
  GameWindow -up-|> JFrame
  GameWindow o-- GameCanvas : gameCanvas
  GameWindow o-- GameEngine : gm
  Ghost -up-|> DynamicObject
  Ghost o-- Position : position
  Ghost o-- Direction : direction
  NetworkReciever -up-|> Runnable
  NetworkReciever -up-|> Observable
  Player o-- Worm : worm
  Player o-- PlayerPanel : playerPanel
  PlayerPanel -up-|> Container
  Position -up-|> BoardCordinates
  StartScreen -up-|> Container
  Worm -up-|> GameObject
  Worm o-- Position : headPos
  Worm o-- Position : tailPos
  Worm o-- Position : startPos
  Worm o-- Position : position
  Worm o-- Direction : direction
  Worm o-- Direction : nextDirection


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
